# TaskFleet

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_SECURITY_ANALYSIS.md  DIAGNOSE_LOGIN.ps1  FRONTEND_FIXES.md  FRONTEND_LOGIN_TEST_GUIDE.md  LOGIN_TEST_REPORT.md  MULTI_TENANT_IMPLEMENTATION_SUMMARY.md  README.md  ROLE_RENAME_COMPLETION_REPORT.md  TEST_REPORT.md  TROUBLESHOOTING.md  USERS_ROUTE_FIX.md  WHY_NO_DATA.md  dev-start.bat  dev-start.sh  start-backend.bat  test-frontend-permissions.ps1  test_frontend_balance.html  workspace-fix-report.md
.github/: .prompt.md  README.md
.github/instructions/: auth-system.instructions.md  build-scripts.instructions.md  core-modules.instructions.md  (+4 more)
adb_xml_reader/: .gitignore  Cargo.toml  README.md  test_contacts_vcf.txt
adb_xml_reader/src/: lib.rs  main.rs  vcf_import_optimized.rs
deploy/: flow-farm-8000.service  flow-farm.service  start.sh  ubuntu-deploy.sh
docs/: DATA_DICTIONARY.md  DEPLOYMENT_AND_TESTING_GUIDE.md  DEVELOPER.md  DOCUMENT_TREE.md  FEATURE_REQUIREMENTS.md  MULTI_PLATFORM_PERMISSION_UNITY.md  PERMISSION_MATRIX_OPTIMIZED.md  PERMISSION_OPTIMIZATION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PROJECT_STATUS_AND_REQUIREMENTS.md  README.md  ROLE_SYSTEM_ANALYSIS_AND_OPTIMIZATION.md  TEST_DATA_SUMMARY.md  USER_GUIDE.md
employee-client/: .gitignore  .prompt.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  TESTING_GUIDE.md  test-run.bat
employee-client/src-tauri/: Cargo.toml
employee-client/src-tauri/src/: adb_manager.rs  auth_models.rs  auth_service.rs  contact_manager.rs  main.rs  models.rs  permissions.rs  taskfleet_api.rs  taskfleet_commands.rs  taskfleet_models.rs  xiaohongshu_automator.rs
employee-client/src-tauri/src/commands/: auth.rs  automation.rs  contacts.rs  devices.rs  mod.rs  tasks.rs
server-backend/: .env.example  .gitignore  Cargo.toml  Cargo_query.toml  compile-ubuntu-latest.bat  compile-ubuntu.bat  compile-ubuntu.ps1  deploy.bat  deploy.sh  query_users.ps1  query_users_simple.ps1  start.bat  start_web_server.bat  start_web_server.sh  test-company-isolation.ps1  test-permission-isolation.ps1  user_output.txt
server-backend/src/: config.rs  database.rs  errors.rs  lib.rs  main.rs  models.rs  server.rs  static_handler.rs
server-backend/src/handlers/: auth.rs  billing.rs  company.rs  company_pricing.rs  devices.rs  docs.rs  health.rs  kpi.rs  mod.rs  projects.rs  projects_temp.rs  reports.rs  statistics.rs  tasks.rs  tasks_temp.rs  users.rs  websocket.rs  work_records.rs
server-backend/src/middleware/: auth.rs
server-backend/src/repositories/: billing_repository.rs  company_repository.rs  device_repository.rs  mod.rs  project_repository.rs  task_repository.rs  user_repository.rs  work_record_repository.rs
server-backend/src/services/: auth.rs  billing.rs  company.rs  company_pricing.rs  device.rs  kpi.rs  mod.rs  project.rs  report.rs  statistics.rs  task.rs  user.rs  work_record.rs
server-backend/src/utils/: jwt.rs  mod.rs  password.rs
server-backend/static/: index.html
server-backend/static/assets/: index-70474984.css  index-BgtfmXbw.js  index-C-cLCyDu.js  index-DjIuuV94.css  index-fa244574.js
server-backend/templates/: 404.html  fallback.html
server-backend/tests/: integration_auth.rs  integration_device.rs  integration_task.rs  test_helpers.rs  unit_kpi_service.rs  unit_user_service.rs  unit_work_record_service.rs
server-frontend/: .gitignore  FRONTEND_REFACTOR_SUMMARY.md  README.md  index.html  vite.config.ts
(+133 files in other folders)
