[package]
name = "adb_xml_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
roxmltree = "0.18"
chrono = { version = "0.4", features = ["serde"] }
